--- a/analises/analise_defeitos.ipynb
+++ b/analises/analise_defeitos.ipynb
@@ -2921,7 +2921,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 470,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "MultiIndex: 200 entries, (192970, 'C0516.0000R', Timestamp('2024-01-03 00:00:00')) to (194121, 'C0516.0000R', Timestamp('2024-06-30 00:00:00'))\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   Gotas cortadas (toneladas)  200 non-null    float64\n",
+      " 1   Peso médio (g)              200 non-null    float64\n",
+      " 2   Cortes por minuto           200 non-null    float64\n",
+      " 3   Comprimento médio (mm)      200 non-null    float64\n",
+      " 4   Diâmetro                    200 non-null    float64\n",
+      " 5   Temperatura (F°)            200 non-null    float64\n",
+      " 6   Tras-PV (F°)                200 non-null    float64\n",
+      " 7   Fritas-PV (F°)              200 non-null    float64\n",
+      " 8   Agit-PV (F°)                200 non-null    float64\n",
+      " 9   Meio-PV (F°)                200 non-null    float64\n",
+      " 10  Frente-PV (F°)              200 non-null    float64\n",
+      " 11  Total de Defeitos           200 non-null    int64  \n",
+      " 12  Defeito Mais Frequente      200 non-null    object \n",
+      "dtypes: float64(11), int64(1), object(1)\n",
+      "memory usage: 28.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_combinado.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 474,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_numerico = df_combinado.select_dtypes(include=[np.number])\n",
+    "\n",
+    "correlation_matrix = df_numerico.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 475,
    "metadata": {},
    "outputs": [
     {
@@ -3284,7 +3331,7 @@
        "[200 rows x 13 columns]"
       ]
      },
-     "execution_count": 463,
+     "execution_count": 475,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3295,39 +3342,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "MultiIndex: 200 entries, (192970, 'C0516.0000R', Timestamp('2024-01-03 00:00:00')) to (194121, 'C0516.0000R', Timestamp('2024-06-30 00:00:00'))\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column                      Non-Null Count  Dtype  \n",
-      "---  ------                      --------------  -----  \n",
-      " 0   Gotas cortadas (toneladas)  200 non-null    float64\n",
-      " 1   Peso médio (g)              200 non-null    float64\n",
-      " 2   Cortes por minuto           200 non-null    float64\n",
-      " 3   Comprimento médio (mm)      200 non-null    float64\n",
-      " 4   Diâmetro                    200 non-null    float64\n",
-      " 5   Temperatura (F°)            200 non-null    float64\n",
-      " 6   Tras-PV (F°)                200 non-null    float64\n",
-      " 7   Fritas-PV (F°)              200 non-null    float64\n",
-      " 8   Agit-PV (F°)                200 non-null    float64\n",
-      " 9   Meio-PV (F°)                200 non-null    float64\n",
-      " 10  Frente-PV (F°)              200 non-null    float64\n",
-      " 11  Total de Defeitos           200 non-null    int64  \n",
-      " 12  Defeito Mais Frequente      200 non-null    object \n",
-      "dtypes: float64(11), int64(1), object(1)\n",
-      "memory usage: 28.7+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_combinado.info()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
