finalizando analise e documentação

--- a/analises/analise_defeitos.ipynb
+++ b/analises/analise_defeitos.ipynb
@@ -2110,6 +2110,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resetando index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 182,
    "metadata": {},
