--- a/analises/modelo_ml.ipynb
+++ b/analises/modelo_ml.ipynb
@@ -13,19 +13,14 @@
     "  \n",
     "  2. **Quantidades de defeitos por dia**, prever em qual dia da produção será mais provável ocorrer o maior número de defeitos.\n",
     "\n",
-    "Essas previsões serão usadas para:\n",
-    "- Melhorar a **qualidade da produção**, permitindo ações preventivas em dias críticos.\n",
-    "- **Otimizar o processo de produção**, com base no histórico de ordens anteriores.\n",
-    "- Ajudar o time a **planejar** e **dimensionar** ordens de forma mais eficiente, **antecipando** o comportamento de defeitos com base nas características do pedido e na duração da ordem.\n",
-    "\n",
     "### 2. **Solução**\n",
     "\n",
     "**Solução Proposta**:\n",
-    "- Para prever o **total de defeitos**, vou implementar um modelo de regressão, que será treinado com dados históricos sobre medidas físicas (peso, comprimento e diâmetro) e o total de defeitos observados em ordens anteriores.\n",
+    "- Para prever o **total de defeitos**, vou implementar um modelo de **regressão**, que será treinado com dados históricos sobre medidas físicas (peso, comprimento e diâmetro) e o total de defeitos observados em ordens anteriores.\n",
     "- Para prever os **dias críticos de defeitos**, farei uma análise de sazonalidade, que considera o **padrão** de defeitos ao longo dos dias de produção de cada ordem. Isso nos ajudará a identificar quais dias (por exemplo, dia 2) têm maior chance de apresentar defeitos.\n",
     "- Além disso, a **duração da ordem** (quantidade de dias de produção) será um parâmetro importante para ajustar as previsões. Ordens mais longas tendem a ter mais defeitos, e a duração influencia o comportamento dos defeitos ao longo dos dias.\n",
     "\n",
-    "**Modelo Utilizado**:\n",
+    "**Algoritmos Utilizados**:\n",
     "- **Regressão (Gradient Boosting)**: Para prever o **total de defeitos** com base nas características do pedido e a duração da ordem.\n",
     "- **Análise de série temporal**: Para identificar **quais dias** terão maior probabilidade de defeitos ao longo da produção.\n",
     "\n",
@@ -7593,6 +7588,23 @@
     "\n",
     "print(f\"Gradient Boosting - Mean Squared Error (MSE): {mse_gb}\")\n",
     "print(f\"Gradient Boosting - R² Score: {r2_gb}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Mean Squared Error (MSE)**: Mede o erro médio ao quadrado entre os valores previstos pelo modelo e os valores reais. No caso, um MSE de 7698,76 indica que, em média, o modelo apresenta esse nível de erro nas previsões, o que pode ser considerado aceitável dependendo da escala dos defeitos totais.\n",
+    "\n",
+    "\n",
+    "- **R² Score**: Representa o quanto do comportamento dos dados o modelo consegue explicar, com valores próximos de 1,0 indicando alta precisão. Aqui, o R² de 0,99 mostra que o modelo explica 99% da variação nos defeitos totais, o que reflete um excelente ajuste aos dados."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Meu modelo de Gradient Boosting está com um R² de 0,99, o que indica alta precisão nas previsões, embora haja sinais de ***overfitting*** devido ao impacto significativo da ***duração*** da ordem nos defeitos ***totais***. Apesar disso, o diferencial da solução está na capacidade de ***distribuir*** os defeitos totais previstos ao longo dos dias da nova ordem, permitindo identificar os dias críticos e agir preventivamente para otimizar a produção. "
    ]
   },
   {
