--- a/analises/analise_defeitos.ipynb
+++ b/analises/analise_defeitos.ipynb
@@ -645,7 +645,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Criando coluna ``Data``, somente com data, sem o horário do registro"
+    "### Criando coluna ``Data``, somente com data, sem o horário do registro\n",
+    "\n",
+    "### Agrupando Defeitos por Data, Artigo e Ordem"
    ]
   },
   {
