--- a/analises/modelo_ml.ipynb
+++ b/analises/modelo_ml.ipynb
@@ -35,10 +35,6 @@
     "  - Número de dias que a produção vai durar (fornecido pelo time de vendas ou orçamento).\n",
     "- **Dados Históricos**: O modelo é treinado com ordens passadas, suas medidas e os defeitos observados.\n",
     "\n",
-    "**Processamento**:\n",
-    "- O modelo será treinado com essas entradas para aprender os padrões que relacionam as **medidas físicas** e a **duração** com os **defeitos** observados em ordens passadas.\n",
-    "- O modelo ajustará as previsões com base nos padrões de **sazonalidade** dos defeitos, observando quais dias em ordens passadas têm mais defeitos.\n",
-    "\n",
     "**Outputs (Saídas do Modelo)**:\n",
     "- **Previsão do Total de Defeitos**: Para uma nova ordem, o modelo preverá o total de defeitos, com base nas novas medidas fornecidas.\n",
     "- **Previsão dos Dias Críticos de Defeitos**: O modelo também preverá os dias críticos de defeitos, ou seja, os dias específicos em que a ordem pode apresentar mais defeitos, com base no histórico de ordens anteriores e sua sazonalidade.\n",
@@ -52,8 +48,6 @@
     "  - **Ação preventiva**: Saber antecipadamente quais dias têm mais chance de defeitos pode otimizar os processos de produção.\n",
     "  \n",
     "  - **Apoio à decisão**: Ajudar os times de produção e vendas a planejar melhor as ordens e a controlar a qualidade da produção.\n",
-    "\n",
-    "Segue a especificação atualizada com o tópico de \"Próximos Passos\":\n",
     "\n",
     "\n",
     "### 5. **Próximos Passos**\n",
@@ -94,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +674,7 @@
        "[200 rows x 133 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +733,7 @@
        "Length: 133, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1159,7 @@
        "[200 rows x 136 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1420,7 @@
        "[200 rows x 6 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1694,7 @@
        "34         194121             6"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1718,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1734,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1750,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1782,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2864,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2873,7 +2867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3064,7 +3058,7 @@
        "[200 rows x 8 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3083,7 +3077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3099,7 +3093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3108,7 +3102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3361,7 +3355,7 @@
        "194121                                1436                6"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3386,7 +3380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3395,7 +3389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -4335,7 +4329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4352,7 +4346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4368,7 +4362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4384,7 +4378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4395,7 +4389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalizando a duração das ordens"
+    "### Padronizando a duração das ordens"
    ]
   },
   {
@@ -4407,7 +4401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4426,7 +4420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -4532,7 +4526,7 @@
        "[200 rows x 2 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4550,7 +4544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4577,7 +4571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -4707,7 +4701,7 @@
        "[200 rows x 4 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4740,7 +4734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4757,7 +4751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -5775,7 +5769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5792,7 +5786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -6742,7 +6736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6751,7 +6745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -7034,7 +7028,7 @@
        "34         194121                         1436                6"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7052,7 +7046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7068,7 +7062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7085,7 +7079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7101,7 +7095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7119,7 +7113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -7535,7 +7529,7 @@
        "GradientBoostingRegressor(random_state=42)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7554,7 +7548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7570,7 +7564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -7623,19 +7617,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de defeitos previsto para a nova ordem: 2161.52241640681\n"
+     ]
+    }
+   ],
    "source": [
     "nova_ordem = {\n",
     "    'Peso médio (g)': 160,\n",
-    "    'Comprimento médio (mm)': 200,\n",
+    "    'Comprimento médio (mm)': 120,\n",
     "    'Diâmetro': 30.2,\n",
     "    'Dias de Duração': 9\n",
     "}\n",
     "\n",
     "X_nova_ordem = scaler.transform(pd.DataFrame([nova_ordem])) \n",
-    "total_defeitos_previsto = gb_model.predict(X_nova_ordem)"
+    "total_defeitos_previsto = gb_model.predict(X_nova_ordem)\n",
+    "print(f\"Total de defeitos previsto para a nova ordem: {total_defeitos_previsto[0]}\")"
    ]
   },
   {
@@ -7647,7 +7650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7672,7 +7675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7703,7 +7706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7719,7 +7722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7738,7 +7741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7773,7 +7776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -8752,7 +8755,7 @@
        "9                    240.312793"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8799,7 +8802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8815,7 +8818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8831,7 +8834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8840,7 +8843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -9239,7 +9242,7 @@
        "[200 rows x 138 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9257,7 +9260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9274,7 +9277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -9323,25 +9326,25 @@
          ],
          "xaxis": "x",
          "y": [
-          2151.4774285714275,
+          2151.477428571427,
           2151.9546874999987,
-          2147.499999999999,
+          2147.4999999999986,
           2143.673636363635,
-          2142.654705882352,
-          2139.8335714285704,
-          2140.464999999999,
-          2137.732727272726,
-          2132.119999999999,
+          2142.6547058823517,
+          2139.83357142857,
+          2140.4649999999983,
+          2137.7327272727257,
+          2132.1199999999985,
           2132.4279999999985,
           2127.192499999999,
-          2094.829999999999,
-          2122.3499999999985,
-          2124.2099999999987,
-          2125.6099999999988,
+          2094.829999999998,
+          2122.349999999999,
+          2124.209999999998,
+          2125.6099999999983,
           2123.329999999999,
-          2123.359999999999,
-          2124.1499999999983,
-          2123.599999999999,
+          2123.3599999999988,
+          2124.1499999999987,
+          2123.5999999999985,
           2137.029999999999
          ],
          "yaxis": "y"
@@ -10203,7 +10206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -11132,7 +11135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -12061,7 +12064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -13004,7 +13007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13013,7 +13016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -14042,7 +14045,7 @@
        "[32 rows x 138 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14068,7 +14071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
