--- a/analises/analise_defeitos.ipynb
+++ b/analises/analise_defeitos.ipynb
@@ -578,6 +578,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retornando artigos únicos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
