--- a/analises/analise_defeitos.ipynb
+++ b/analises/analise_defeitos.ipynb
@@ -21,6 +21,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 38625 = Linhas do primeiro semestre"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -63,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -231,231 +238,57 @@
        "      <td>1</td>\n",
        "      <td>872263</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38620</th>\n",
-       "      <td>Wheaton</td>\n",
-       "      <td>Wheaton - B1</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>Máquina IS</td>\n",
-       "      <td>194121</td>\n",
-       "      <td>C0516.0000R</td>\n",
-       "      <td>MB -1377-N1N | F | NH | B | LISO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-06-30 23:20:03</td>\n",
-       "      <td>3160120</td>\n",
-       "      <td>2024-06-30</td>\n",
-       "      <td>2024-06-30</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1091441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38621</th>\n",
-       "      <td>Wheaton</td>\n",
-       "      <td>Wheaton - B1</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>Máquina IS</td>\n",
-       "      <td>194121</td>\n",
-       "      <td>C0516.0000R</td>\n",
-       "      <td>MB -1377-N1N | F | NH | B | LISO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-06-30 23:20:03</td>\n",
-       "      <td>3160126</td>\n",
-       "      <td>2024-06-30</td>\n",
-       "      <td>2024-06-30</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1091441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38622</th>\n",
-       "      <td>Wheaton</td>\n",
-       "      <td>Wheaton - B1</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>Máquina IS</td>\n",
-       "      <td>194121</td>\n",
-       "      <td>C0516.0000R</td>\n",
-       "      <td>MB -1377-N1N | F | NH | B | LISO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-06-30 23:20:03</td>\n",
-       "      <td>3160122</td>\n",
-       "      <td>2024-06-30</td>\n",
-       "      <td>2024-06-30</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1091441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38623</th>\n",
-       "      <td>Wheaton</td>\n",
-       "      <td>Wheaton - B1</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>Máquina IS</td>\n",
-       "      <td>194121</td>\n",
-       "      <td>C0516.0000R</td>\n",
-       "      <td>MB -1377-N1N | F | NH | B | LISO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-06-30 23:20:03</td>\n",
-       "      <td>3160127</td>\n",
-       "      <td>2024-06-30</td>\n",
-       "      <td>2024-06-30</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1091441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38624</th>\n",
-       "      <td>Wheaton</td>\n",
-       "      <td>Wheaton - B1</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>Máquina IS</td>\n",
-       "      <td>194121</td>\n",
-       "      <td>C0516.0000R</td>\n",
-       "      <td>MB -1377-N1N | F | NH | B | LISO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-07-01 00:05:53</td>\n",
-       "      <td>3160215</td>\n",
-       "      <td>2024-07-01</td>\n",
-       "      <td>2024-07-01</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1091473</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>38625 rows × 45 columns</p>\n",
+       "<p>5 rows × 45 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Fábrica Fabrica – Linha Linha Máquina de produção  Ordem de trabalhos  \\\n",
-       "0      Wheaton    Wheaton - B1    B1          Máquina IS              193112   \n",
-       "1      Wheaton    Wheaton - B1    B1          Máquina IS              193112   \n",
-       "2      Wheaton    Wheaton - B1    B1          Máquina IS              193112   \n",
-       "3      Wheaton    Wheaton - B1    B1          Máquina IS              193112   \n",
-       "4      Wheaton    Wheaton - B1    B1          Máquina IS              193112   \n",
-       "...        ...             ...   ...                 ...                 ...   \n",
-       "38620  Wheaton    Wheaton - B1    B1          Máquina IS              194121   \n",
-       "38621  Wheaton    Wheaton - B1    B1          Máquina IS              194121   \n",
-       "38622  Wheaton    Wheaton - B1    B1          Máquina IS              194121   \n",
-       "38623  Wheaton    Wheaton - B1    B1          Máquina IS              194121   \n",
-       "38624  Wheaton    Wheaton - B1    B1          Máquina IS              194121   \n",
+       "   Fábrica Fabrica – Linha Linha Máquina de produção  Ordem de trabalhos  \\\n",
+       "0  Wheaton    Wheaton - B1    B1          Máquina IS              193112   \n",
+       "1  Wheaton    Wheaton - B1    B1          Máquina IS              193112   \n",
+       "2  Wheaton    Wheaton - B1    B1          Máquina IS              193112   \n",
+       "3  Wheaton    Wheaton - B1    B1          Máquina IS              193112   \n",
+       "4  Wheaton    Wheaton - B1    B1          Máquina IS              193112   \n",
        "\n",
-       "      Ref. do artigo                            Artigo  Ordem de sub-trabalho  \\\n",
-       "0        C1164.0000R   MB -1527-N1 | F | NH | C | LISO                    NaN   \n",
-       "1        C1164.0000R   MB -1527-N1 | F | NH | C | LISO                    NaN   \n",
-       "2        C1164.0000R   MB -1527-N1 | F | NH | C | LISO                    NaN   \n",
-       "3        C1164.0000R   MB -1527-N1 | F | NH | C | LISO                    NaN   \n",
-       "4        C1164.0000R   MB -1527-N1 | F | NH | C | LISO                    NaN   \n",
-       "...              ...                               ...                    ...   \n",
-       "38620    C0516.0000R  MB -1377-N1N | F | NH | B | LISO                    NaN   \n",
-       "38621    C0516.0000R  MB -1377-N1N | F | NH | B | LISO                    NaN   \n",
-       "38622    C0516.0000R  MB -1377-N1N | F | NH | B | LISO                    NaN   \n",
-       "38623    C0516.0000R  MB -1377-N1N | F | NH | B | LISO                    NaN   \n",
-       "38624    C0516.0000R  MB -1377-N1N | F | NH | B | LISO                    NaN   \n",
+       "  Ref. do artigo                           Artigo  Ordem de sub-trabalho  \\\n",
+       "0    C1164.0000R  MB -1527-N1 | F | NH | C | LISO                    NaN   \n",
+       "1    C1164.0000R  MB -1527-N1 | F | NH | C | LISO                    NaN   \n",
+       "2    C1164.0000R  MB -1527-N1 | F | NH | C | LISO                    NaN   \n",
+       "3    C1164.0000R  MB -1527-N1 | F | NH | C | LISO                    NaN   \n",
+       "4    C1164.0000R  MB -1527-N1 | F | NH | C | LISO                    NaN   \n",
        "\n",
-       "      Produto final  Lote  ...  Nqa Estado A verificar  Comentário  \\\n",
-       "0               NaN   NaN  ...  0.0      0           0         NaN   \n",
-       "1               NaN   NaN  ...  0.0      0           0         NaN   \n",
-       "2               NaN   NaN  ...  0.0      0           0         NaN   \n",
-       "3               NaN   NaN  ...  0.0      0           0         NaN   \n",
-       "4               NaN   NaN  ...  0.0      0           0         NaN   \n",
-       "...             ...   ...  ...  ...    ...         ...         ...   \n",
-       "38620           NaN   NaN  ...  0.0      0           0         NaN   \n",
-       "38621           NaN   NaN  ...  0.0      0           0         NaN   \n",
-       "38622           NaN   NaN  ...  0.0      0           0         NaN   \n",
-       "38623           NaN   NaN  ...  0.0      0           0         NaN   \n",
-       "38624           NaN   NaN  ...  0.0      0           0         NaN   \n",
+       "  Produto final  Lote  ...  Nqa Estado A verificar  Comentário  \\\n",
+       "0           NaN   NaN  ...  0.0      0           0         NaN   \n",
+       "1           NaN   NaN  ...  0.0      0           0         NaN   \n",
+       "2           NaN   NaN  ...  0.0      0           0         NaN   \n",
+       "3           NaN   NaN  ...  0.0      0           0         NaN   \n",
+       "4           NaN   NaN  ...  0.0      0           0         NaN   \n",
        "\n",
-       "          Data de criação  Chave primária  Definir dia Dia de criação  Turno  \\\n",
-       "0     2024-01-01 06:03:07         2517600   2024-01-01     2024-01-01      1   \n",
-       "1     2024-01-01 06:03:07         2517601   2024-01-01     2024-01-01      1   \n",
-       "2     2024-01-01 06:57:09         2517738   2024-01-01     2024-01-01      1   \n",
-       "3     2024-01-01 06:57:09         2517739   2024-01-01     2024-01-01      1   \n",
-       "4     2024-01-01 06:57:09         2517740   2024-01-01     2024-01-01      1   \n",
-       "...                   ...             ...          ...            ...    ...   \n",
-       "38620 2024-06-30 23:20:03         3160120   2024-06-30     2024-06-30      3   \n",
-       "38621 2024-06-30 23:20:03         3160126   2024-06-30     2024-06-30      3   \n",
-       "38622 2024-06-30 23:20:03         3160122   2024-06-30     2024-06-30      3   \n",
-       "38623 2024-06-30 23:20:03         3160127   2024-06-30     2024-06-30      3   \n",
-       "38624 2024-07-01 00:05:53         3160215   2024-07-01     2024-07-01      3   \n",
+       "      Data de criação  Chave primária  Definir dia Dia de criação  Turno  \\\n",
+       "0 2024-01-01 06:03:07         2517600   2024-01-01     2024-01-01      1   \n",
+       "1 2024-01-01 06:03:07         2517601   2024-01-01     2024-01-01      1   \n",
+       "2 2024-01-01 06:57:09         2517738   2024-01-01     2024-01-01      1   \n",
+       "3 2024-01-01 06:57:09         2517739   2024-01-01     2024-01-01      1   \n",
+       "4 2024-01-01 06:57:09         2517740   2024-01-01     2024-01-01      1   \n",
        "\n",
-       "       Definir chave primária  \n",
-       "0                      872218  \n",
-       "1                      872218  \n",
-       "2                      872263  \n",
-       "3                      872263  \n",
-       "4                      872263  \n",
-       "...                       ...  \n",
-       "38620                 1091441  \n",
-       "38621                 1091441  \n",
-       "38622                 1091441  \n",
-       "38623                 1091441  \n",
-       "38624                 1091473  \n",
+       "   Definir chave primária  \n",
+       "0                  872218  \n",
+       "1                  872218  \n",
+       "2                  872263  \n",
+       "3                  872263  \n",
+       "4                  872263  \n",
        "\n",
-       "[38625 rows x 45 columns]"
+       "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -1648,6 +1481,15 @@
     "    on='Data de prod', \n",
     "    how='inner'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
@@ -21241,6 +21083,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Tratar defeitos especificos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retornar por correlação alta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Gráfico de Dispersão"
    ]
   },
@@ -35196,6 +35052,11 @@
    "source": [
     "df_defeitos_medidas_geral_reset.to_csv('../dados/medidas_geral_e_defeitos.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
