Tratando segundo dia

--- a/analises/modelo_ml.ipynb
+++ b/analises/modelo_ml.ipynb
@@ -8070,14 +8070,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total de defeitos previsto para a nova ordem: 2331.3429814026454\n"
+      "Total de defeitos previsto para a nova ordem: 2331.34\n"
      ]
     },
     {
@@ -9091,13 +9091,13 @@
        "15                   106.335362"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f\"Total de defeitos previsto para a nova ordem: {total_defeitos_previsto[0]}\")\n",
+    "print(f\"Total de defeitos previsto para a nova ordem: {total_defeitos_previsto[0]:.2f}\")\n",
     "\n",
     "fig = go.Figure()\n",
     "\n",
