--- a/analises/modelo_ml.ipynb
+++ b/analises/modelo_ml.ipynb
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
        "[200 rows x 137 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2279,8 +2279,8 @@
     "    df_reset,\n",
     "    y='Total de Defeitos no Dia',\n",
     "    title='Distribuição de Total de Defeitos no Dia',\n",
-    "    points='all',  # Mostrar todos os pontos de dados\n",
-    "    color_discrete_sequence=['#636EFA']  # Cor personalizada\n",
+    "    points='all',\n",
+    "    color_discrete_sequence=['#636EFA']\n",
     ")\n",
     "\n",
     "# Ajustar layout\n",
